@@ -165,4 +165,18 @@ public class HdfsConstants {
 
   public static final String SEPARATOR_DOT_SNAPSHOT_DIR_SEPARATOR
       = Path.SEPARATOR + DOT_SNAPSHOT_DIR + Path.SEPARATOR;
+
+  public static final String ALLSSD_STORAGE_POLICY_NAME = "ALL_SSD";
+  public static final String ONESSD_STORAGE_POLICY_NAME = "ONE_SSD";
+  public static final String HOT_STORAGE_POLICY_NAME = "HOT";
+  public static final String WARM_STORAGE_POLICY_NAME = "WARM";
+  public static final String COLD_STORAGE_POLICY_NAME = "COLD";
+  public static final String LAZY_PERSIST_STORAGE_POLICY_NAME = "LAZY_PERSIST";
+
+  public static final byte LAZY_PERSIST_STORAGE_POLICY_ID = 15;
+  public static final byte ALLSSD_STORAGE_POLICY_ID = 12;
+  public static final byte ONESSD_STORAGE_POLICY_ID = 10;
+  public static final byte HOT_STORAGE_POLICY_ID = 7;
+  public static final byte WARM_STORAGE_POLICY_ID = 5;
+  public static final byte COLD_STORAGE_POLICY_ID = 2;
 }
